syntax = "proto3";

import "content.proto";
option csharp_namespace = "tobeh.TypoContentService";
package generator;

service ImageGenerator {
  
  // Generate a image that combines the first frames of all sprites in the combo
  rpc GenerateSpriteCombo (GenerateComboMessage) returns (stream content.FileChunkMessage);
  
  // Generate a card image for a user
  rpc GenerateCard (GenerateCardMessage) returns (stream content.FileChunkMessage);
}
message ColorMapMessage {
  int32 spriteId = 1;
  int32 hueShift = 3;
}

message GenerateComboMessage {
  repeated int32 spriteIds = 1;
  repeated ColorMapMessage colorMaps = 2;
}

message GenerateCardMessage {
  int32 settingsOwnerLogin = 1;
  string profileImageUrl = 2;
  GenerateComboMessage combo = 3;
  string username = 4;
  int32 bubbles = 5;
  int32 drops = 6;
  double dropRatio = 7;
  string firstSeen = 8;
  int32 spritesCount = 9;
  int32 eventsParticipated = 10;
  int32 eventsDropValue = 11;
  int32 bubbleRank = 12;
  int32 dropRank = 13;
  int32 serversConnected = 14;
  bool isPatron = 15;
  bool isEarlyUser = 16;
  bool isModerator = 17;  
}

